--- a/tests/known_failures.yaml
+++ b/tests/known_failures.yaml
@@ -348,6 +348,8 @@ ANY:
     hipMultiThreadAddCallback: ''
     syncthreadsExitedThreads: 'Exited threads calling __syncthreads'
   LEVEL0_GPU:
+    Unit_hipEvent: 'zeEventQueryStatus() is blocking'
+    hipKernelLaunchIsNonBlocking: 'zeEventQueryStatus() is blocking'
     hipMemset_Unit_hipMemsetAsync_SetMemoryWithOffset_Helgrind: 'False positives from L0 helper thread'
     Unit_hipEvent: 'zeEventQueryStatus took 100us, exceeded 100us threshold'
     hipKernelLaunchIsNonBlocking: 'zeEventQueryStatus took 100us, exceeded 100us threshold'
