Add a test for constant memory in hipRTC

--- a/tests/hiprtc/CMakeLists.txt
+++ b/tests/hiprtc/CMakeLists.txt
@@ -26,3 +26,4 @@
 add_hip_test(TestHiprtcCPPKernels.cc)
 add_hip_test(TestHiprtcOptions.cc)
 add_hip_test(TestShellMetacharacters.cc)
+add_hip_test(TestConstantMemory.cc)
