Add test for hipMemcpyToSymbol with templated __constant__ memory
- Introduced TestTemplatedConstantMemcpy.hip to reproduce Issue #977.
- The test verifies the behavior of hipMemcpyToSymbol with templated constant memory.
- Updated CMakeLists.txt to include the new test in the build process.

--- a/tests/runtime/CMakeLists.txt
+++ b/tests/runtime/CMakeLists.txt
@@ -109,6 +109,7 @@ if(OpenCL_LIBRARY) # Depends on OpenCL
   add_hip_runtime_test(TestBufferDevAddr.hip)
 endif()
 add_hip_runtime_test(Test887.hip)
+add_hip_runtime_test(TestTemplatedConstantMemcpy.hip)
 
 add_shell_test(../run_testenvvars.sh)
 set_tests_properties(run_testenvvars PROPERTIES
