--- a/.github/workflows/check-unit-tests-arm.yml
+++ b/.github/workflows/check-unit-tests-arm.yml
@@ -13,6 +13,8 @@ concurrency:
 jobs:
   unit-tests-llvm-18-release-salami:
     runs-on: ARM64
+    env:
+      CHIP_MODULE_CACHE_DIR: ""
     steps:
       - uses: actions/checkout@v3
         with:
