--- a/tests/runtime/CMakeLists.txt
+++ b/tests/runtime/CMakeLists.txt
@@ -123,3 +123,4 @@ add_hip_runtime_test(TestMemcpyAsyncPageable.hip)
 # Test that hipStreamWaitEvent correctly enforces cross-stream ordering.
 add_hip_runtime_test(TestStreamWaitEventOrdering.cpp)
 add_hip_runtime_test(TestEventRecordCircularDep.cpp)
+add_hip_runtime_test(TestHipLaunchHostFunc.cpp)
