--- a/.github/workflows/check-unit-tests-arm.yml
+++ b/.github/workflows/check-unit-tests-arm.yml
@@ -1,6 +1,5 @@
 # Workflow syntax:
 # https://help.github.com/en/articles/workflow-syntax-for-github-actions
-name: Unit Tests ARM GPUs
 
 on:
   pull_request:
@@ -12,7 +11,7 @@ concurrency:
 
 jobs:
   unit-tests-llvm-18-release-salami:
-    runs-on: ARM64
+    runs-on: [self-hosted, Linux, ARM64]
     steps:
       - uses: actions/checkout@v3
         with:
