--- a/.github/workflows/compile-and-cache-main.yml
+++ b/.github/workflows/compile-and-cache-main.yml
@@ -18,7 +18,7 @@ jobs:
 
   build:
     needs: cancel-nightly
-    runs-on: [self-hosted, X64]
+    runs-on: [self-hosted, Linux, X64]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
