Mark TestEventRecordCircularDep as known failure for ARM Mali
The test hangs on ARM Mali-G52 due to a driver bug in handling circular
cross-stream event dependencies with event reuse.

The test validates chipStar's fix for preventing circular dependencies when
events are reused across streams. The fix works by 'extracting event dependencies':

Instead of making barriers wait on user events directly:
  hipStreamWaitEvent(s2, e1) -> Barrier on s2 waits for event e1

The fix extracts e1's dependencies and waits on those:
  e1 depends on [KernelEvent] -> Barrier on s2 waits for KernelEvent

This prevents circular dependencies because we depend on the actual underlying
work (kernel launches, memory copies) rather than reusable event handles. When
e1 is reused/recorded again, barriers still correctly wait for the original work.

Test scenario:
- Creates circular waits: s1 waits on e2 from s2, s2 waits on e1 from s1
- Reuses event e1 by recording it twice on s1
- Calls hipDeviceSynchronize() which should complete without deadlock

On Mali, clFinish() hangs indefinitely even though chipStar correctly extracts
dependencies to avoid actual circular dependencies. The issue is Mali-specific
- all other OpenCL implementations (Intel, NVIDIA, AMD, PoCL) handle this correctly.

This is NOT related to the dual-queue (regular+profiling) pattern. Even with
a single queue, the circular dependency pattern with event reuse causes Mali to hang.

--- a/tests/known_failures.yaml
+++ b/tests/known_failures.yaml
@@ -426,6 +426,7 @@ salami:
   OPENCL_GPU:
     TestStaticLibRDC: 'Compiler without static library support'
     TestBallot: 'Unsupported SPIR-V capability: SubgroupDispatch'
+    TestEventRecordCircularDep: 'ARM Mali driver bug: clFinish hangs with circular cross-stream event dependencies and event reuse'
     hipDynamicShared: 'flaky'
     clock: 'timing dependent, flaky'
     hipStreamSemantics: 'TestStreamSemantics_2 (non-blocking stream):  Failed, then timeout'
