Adjustments for Clang's new offload driver
This patch updates chipStar to use Clang's new offload driver for the
next LLVM release version 22. The old/current driver one may be
removed in Clang in the future, rendering HIPSPV toolchain inoperable.

This patch depends on the following things:

* An upstream LLVM patch whose review is ongoing
  llvm/llvm-project#168043. In the meanwhile this patch can be tried
  out using [my branch](
  https://github.com/linehill/llvm-project/tree/hipspv-new-offload-driver). This
  patch also upstream changes from chipStar's LLVM fork - more details
  in the below.

* The following
  [ROCm-DeviceLib](https://github.com/linehill/ROCm-Device-Libs/tree/clang-new-offload-driver)
  and [HIPCC](https://github.com/linehill/HIPCC/tree/clang-new-offload-driver)
  submodules updates. The submodules are temporarily tracking the
  revisions from my repositories - I'll update them once the changes
  have landed on the respective CHIP-SPV repositories.

Upstreaming patches of chipStar's LLVM fork

After the LLVM patch is merged, chipStar should no longer need to
depend on chipStar's LLVM fork for the future LLVM releases. Couple
commits are omitted in the upstream LLVM patch:

* SPIR-V datalayout change: an alternate fix is proposed for
  CHIP-SPV/ROCm-Device-Lib.

* Enabling debug info for the device code: SPIR-V LLVM Translator
  doesn't yet robustly handle debug info
  (https://github.com/KhronosGroup/SPIRV-LLVM-Translator/issues/3247).

--- a/bitcode/CMakeLists.txt
+++ b/bitcode/CMakeLists.txt
@@ -42,14 +42,14 @@ if("${LLVM_VERSION}" VERSION_LESS 14.0)
 else()
   # HIP-Clang automatically looks for hipspv-<triple>.bc in
   # <bc-destination> directory in HIP compilation mode.
-  set(BC_TRIPLE "spirv64")
+  set(BC_TRIPLE ${OFFLOAD_TRIPLE})
   set(BC_FILE "hipspv-${BC_TRIPLE}.bc")
   set(BC_DESTINATION lib/hip-device-lib)
 endif()
 
 set(BITCODE_CL_COMPILE_FLAGS
   -Xclang -finclude-default-header -O2 -x cl -cl-std=CL2.0
-  -cl-ext=+cl_khr_subgroup --target=${BC_TRIPLE}
+  -cl-ext=+cl_khr_subgroup
   -DDEFAULT_WARP_SIZE=${DEFAULT_WARP_SIZE} -emit-llvm
   ${EXTRA_FLAGS})
 set(BITCODE_C_COMPILE_FLAGS
@@ -60,18 +60,19 @@ set(BITCODE_C_COMPILE_FLAGS
 set(NON_OCML_SOURCES "devicelib" "_cl_print_str" "texture" "malloc") # "printf_support"
 
 # Compiles SOURCE treated as OpenCL to LLVM bitcode.
-function(add_opencl_bitcode SOURCE OUTPUT)
+function(add_opencl_bitcode TARGET SOURCE OUTPUT)
   add_custom_command(
     OUTPUT "${OUTPUT}"
     DEPENDS "${SOURCE}"
     COMMAND "${CMAKE_CXX_COMPILER}" ${BITCODE_CL_COMPILE_FLAGS}
-    -o "${OUTPUT}" -c "${SOURCE}"
+    --target=${TARGET} -o "${OUTPUT}" -c "${SOURCE}"
     COMMENT "Building ${SOURCE}"
     VERBATIM)
 endfunction()
 
 foreach(SOURCE IN LISTS NON_OCML_SOURCES)
   add_opencl_bitcode(
+    ${BC_TRIPLE}
     "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE}.cl"
     "${CMAKE_CURRENT_BINARY_DIR}/BC/${SOURCE}.bc")
   list(APPEND DEPEND_LIST "${CMAKE_CURRENT_BINARY_DIR}/BC/${SOURCE}.bc")
@@ -82,6 +83,7 @@ set(ROCM_DEVICELIB_STANDALONE_BUILD ON)
 
 set(SAVED_WARN_DEPRECATED ${CMAKE_WARN_DEPRECATED})
 set(CMAKE_WARN_DEPRECATED OFF)
+set(AMDGPU_TARGET_TRIPLE ${BC_TRIPLE})
 add_subdirectory(ROCm-Device-Libs EXCLUDE_FROM_ALL)
 set(CMAKE_WARN_DEPRECATED ${SAVED_WARN_DEPRECATED})
 
@@ -165,12 +167,22 @@ set(RTDEVLIB_SOURCES_v1_3
   ballot_native)
 
 # Alias for add_opencl_bitcode.
-foreach(SOURCE IN LISTS RTDEVLIB_SOURCES_v1_2 RTDEVLIB_SOURCES_v1_3)
- add_opencl_bitcode(
-   "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE}.cl"
-   "${CMAKE_CURRENT_BINARY_DIR}/${SOURCE}.bc")
- list(APPEND RTDEVLIB_BITCODES "${CMAKE_CURRENT_BINARY_DIR}/${SOURCE}.bc")
+foreach(SOURCE IN LISTS RTDEVLIB_SOURCES_v1_2)
+  add_opencl_bitcode(
+    spirv64v1.2-unknown-chipstar
+    "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE}.cl"
+    "${CMAKE_CURRENT_BINARY_DIR}/${SOURCE}.bc")
+  list(APPEND RTDEVLIB_BITCODES "${CMAKE_CURRENT_BINARY_DIR}/${SOURCE}.bc")
 endforeach()
+
+foreach(SOURCE IN LISTS RTDEVLIB_SOURCES_v1_3)
+  add_opencl_bitcode(
+    spirv64v1.3-unknown-chipstar
+    "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE}.cl"
+    "${CMAKE_CURRENT_BINARY_DIR}/${SOURCE}.bc")
+  list(APPEND RTDEVLIB_BITCODES "${CMAKE_CURRENT_BINARY_DIR}/${SOURCE}.bc")
+endforeach()
+
 
 add_custom_target("rtdevlib-bitcodes" DEPENDS ${RTDEVLIB_BITCODES})
 
