Exclude failing tests that were previosuly skipped

--- a/tests/known_failures.yaml
+++ b/tests/known_failures.yaml
@@ -1,6 +1,33 @@
 TOTAL_TESTS: 1397
 ANY:
   ALL:
+    Unit_hipMemPrefetchAsyncNegativeTst: 'hipMemPrefetchAsync not implemented'
+    Unit_hipMemPrefetchAsync: 'hipMemPrefetchAsync not implemented'
+    Unit_hipMemPrefetchAsyncAdviseFlgTst: 'hipMemPrefetchAsync not implemented'
+    Unit_hipMemPrefetchAsyncAccsdByTst: 'hipMemPrefetchAsync not implemented'
+    Unit_hipMemRangeGetAttribute_TstCountParam: 'hipMemAdvise not implemented'
+    Unit_hipMemRangeGetAttribute_NegativeTests: 'hipMemAdvise not implemented'
+    Unit_hipMemRangeGetAttribute_AccessedBy1: 'hipMemAdvise not implemented'
+    Unit_hipMemRangeGetAttribte_3: 'hipMemAdvise not implemented'
+    Unit_hipMemRangeGetAttribute_4: 'hipMemAdvise not implemented'
+    Unit_hipMemRangeGetAttribute_PrefetchAndGtAttr: 'hipMemPrefetchAsync not implemented'
+    Unit_hipMemAdvise_TstFlags: 'hipMemAdvise not implemented'
+    Unit_hipMemAdvise_NegtveTsts: 'hipMemAdvise not implemented'
+    Unit_hipMemAdvise_PrefrdLoc: 'hipMemAdvise not implemented'
+    Unit_hipMemAdvise_ReadMostly: 'hipMemAdvise not implemented'
+    Unit_hipMemAdvise_TstFlgOverrideEffect: 'hipMemAdvise not implemented'
+    Unit_hipMemAdvise_TstAccessedByFlg: 'hipMemAdvise not implemented'
+    Unit_hipMemAdvise_TstAccessedByFlg4: 'hipMemAdvise not implemented'
+    Unit_hipMemAdvise_TstMemAdvisePrefrdLoc: 'hipMemAdvise not implemented'
+    Unit_hipMemAdvise_TstMemAdviseMultiFlag: 'hipMemAdvise not implemented'
+    Unit_hipMemAdvise_ReadMosltyMgpuTst: 'hipMemAdvise not implemented'
+    Unit_hipMemAdvise_TstSetUnsetPrfrdLoc: 'hipMemAdvise not implemented'
+    Unit_hipMemRangeGetAttributes_TstFlgs: 'hipMemAdvise not implemented'
+    Unit_hipMemRangeGetAttributes_NegativeTst: 'hipMemAdvise not implemented'
+    Unit_hipMallocManaged_Advanced: 'hipMemAdvise, hipMemPrefetchAsync, hipMemRangeGetAttribute not implemented'
+    Unit_hipMallocManaged_FlgParam: 'Needs hipMemPrefetchAsync/hipMemAdvise to keep host/device coherent across devices'
+    Unit_hipMallocManaged_AccessMultiStream: 'Needs hipMemPrefetchAsync + stream synchronization to make managed data coherent'
+    Unit_hipMemFaultStackAllocation_Check: 'Fails until hipMemPrefetchAsync/managed synchronization is implemented'
     hipDeviceMalloc: 'Failed'
     TestUndefKernelArg: 'Intermittend L0 segfault'
     hipPromoteInt-signed_constant_compare: 'constVal used for signed comparison'
@@ -220,6 +247,9 @@ ANY:
     Unit_hipHostGetFlags_DifferentThreads: ''
     Unit_hipHostGetFlags_InvalidArgs: ''
     Unit_hipHostGetFlags_flagCombos: ''
+    Unit_hipHostRegister_ReferenceFromKernelandhipMemset - double: 'case AllocInfo->MemoryType == hipMemoryTypeManaged in function HipMemSetInternal is not implemented'
+    Unit_hipHostRegister_ReferenceFromKernelandhipMemset - float: 'case AllocInfo->MemoryType == hipMemoryTypeManaged in function HipMemSetInternal is not implemented'
+    Unit_hipHostRegister_ReferenceFromKernelandhipMemset - int: 'case AllocInfo->MemoryType == hipMemoryTypeManaged in function HipMemSetInternal is not implemented'
     Unit_hipIpcCloseMemHandle_Negative_Close_In_Originating_Process: ''
     Unit_hipIpcCloseMemHandle_Positive_Reference_Counting: ''
     Unit_hipIpcGetMemHandle_Positive_Unique_Handles_Reused_Memory: ''
@@ -268,7 +298,8 @@ ANY:
     Unit_hipMemGetInfo_ParaMultiSmall: ''
     Unit_hipMemGetInfo_ParaNonDiv: ''
     Unit_hipMemGetInfo_ParaSmall: ''
-    Unit_hipMemPrefetchAsync_NonPageSz: ''
+    Unit_hipMemPrefetchAsync_NonPageSz: 'hipMemPrefetchAsync not implemented'
+    Unit_hipMemPrefetchAsyncOneToAll: 'hipMemPrefetchAsync not implemented'
     Unit_hipMemset2DASyncMulti: ''
     Unit_hipMemset2DAsync_MultiThread: ''
     Unit_hipMemset3DASyncMulti: ''
