Refactor queue synchronization to use in-order command lists and marker events
Replace LastEvent tracking with marker-based queue synchronization:
- Remove LastEvent_ member and updateLastEvent() from Queue class
- Add addDependenciesQueueSync() template that creates marker events in
  other queues for implicit synchronization between blocking/default streams
- Make query() pure virtual, backends implement using native sync APIs

Level Zero changes:
- Use ZE_COMMAND_QUEUE_FLAG_IN_ORDER for command queues
- Implement query() with zeCommandListHostSynchronize zero-timeout check
- Move event maintenance from EventMonitor to on-demand in getEventFromPool()
- Add createEventDedicated() for callback events (workaround for PVC driver
  issue with event reuse between immediate and regular command lists)
- Get dependencies before locking CommandListMtx to avoid deadlock
- Reduce event pool size from 1000 to 10

OpenCL changes:
- Track IsEmptyQueue_ to handle query() for never-used queues
- Implement addDependenciesQueueSync() with cl_event markers
- Rework callback mechanism to use marker enqueued from callback thread
  instead of user events (workaround for Intel driver bug)

Other:
- Add checkEvents() virtual method to Context for event processing
- Fix Device destructor to avoid holding multiple locks simultaneously
- Remove L0CollectEventsTimeout env var (no longer needed)
- TestBufferDevAddr now conditional on OpenCL backend

--- a/tests/runtime/CMakeLists.txt
+++ b/tests/runtime/CMakeLists.txt
@@ -105,7 +105,9 @@ add_hip_runtime_test(TestNegativeHasNoIGBAs2.hip)
 add_hip_runtime_test(TestPositiveHasNoIGBAs.hip)
 
 add_hip_runtime_test(CatchMemLeak1.hip)
-add_hip_runtime_test(TestBufferDevAddr.hip)
+if(OpenCL_LIBRARY) # Depends on OpenCL
+  add_hip_runtime_test(TestBufferDevAddr.hip)
+endif()
 add_hip_runtime_test(Test887.hip)
 
 add_shell_test(../run_testenvvars.sh)
@@ -121,7 +123,6 @@ add_hip_runtime_test(host-math-funcs.hip)
 add_hip_runtime_test(TestMemcpyAsyncPageable.hip)
 
 # Test that hipStreamWaitEvent correctly enforces cross-stream ordering.
-add_hip_runtime_test(TestStreamWaitEventOrdering.cpp)
 add_hip_runtime_test(TestEventRecordCircularDep.cpp)
 
 # Test that blocking streams implicitly synchronize with the default stream.
