Add support for pocl 7
wip

Skip fp_fast_mode patch for LLVM 18 and 19

The fp_fast_mode patch fails to apply for LLVM 18/19 because the test
file structure changed and opaque pointers are the default. Skip this
patch for these versions while continuing to apply it for other LLVM
versions.

Add version-specific patch for LLVM 17/18 SPIR-V shuffles

The 0002-Pretend-the-SPIR-ver-needed-by-shuffles-is-1.2.patch fails to
apply for LLVM 17/18 because the file uses static_cast<SPIRVWord> format
instead of direct VersionNumber return. Add a version-specific patch
that handles the static_cast format and update configure_llvm.sh to use
it for LLVM 17/18.

Fix disk space issues in CI LLVM builds

- Add disk space cleanup step to remove unused pre-installed software
- Switch all LLVM builds to dynamic linking via configure_llvm.sh
- Remove LLVM 16 (not supported by configure_llvm.sh)
- Add object file cleanup between build and install steps
- Add CMake flags to skip tests/examples/benchmarks/docs
- Update PoCL to use dynamic LLVM linking
- Simplify cache key logic for consistent approach across versions

Skip fp_fast_mode patch for LLVM 17 (test file structure changed)

Drop LLVM 17 from CI testing

Fix hipMemGetInfo assertion crash when all memory is allocated

- Change assertion in hipMemGetInfo from > to >= to allow valid case
  where usedMemory equals GlobalMemSize
- Change reserveMem check from <= to < to prevent allocating exactly
  100% of device memory, which would leave 0 bytes free

This fixes Unit_hipHostRegister_Negative test failures on PoCL where
device memory equals system RAM and max allocation size equals global
memory size.

Update cl_ext_buffer_device_address to official Khronos values

The extension is now official and the values have changed from the
draft spec that was previously used:

- CL_MEM_DEVICE_PRIVATE_ADDRESS_EXT = 0x5000 (allocation flag)
- CL_MEM_DEVICE_ADDRESS_EXT = 0x5001 (query parameter)
- CL_KERNEL_EXEC_INFO_DEVICE_PTRS_EXT = 0x5002

This

--- a/.github/actions/get-shas/action.yml
+++ b/.github/actions/get-shas/action.yml
@@ -41,6 +41,6 @@ runs:
     - id: pocl-sha
       run: scripts/get_sha.sh >> $GITHUB_OUTPUT
       env:
-        URL: https://api.github.com/repos/pocl/pocl/git/refs/tags/v${{ inputs.pocl-version }}.0
+        URL: https://api.github.com/repos/pocl/pocl/git/refs/tags/v${{ inputs.pocl-version }}
         TOKEN: u:${{ github.token }}
       shell: bash
