--- a/tests/known_failures.yaml
+++ b/tests/known_failures.yaml
@@ -309,11 +309,11 @@ ANY:
     hipKernelLaunchIsNonBlocking: ''
     Unit_hipEvent: 'calling hipEventGetElapsed time on (start, start) and (stop, stop) causes subsequent call to be ready instread of hipErrorNotReady'
   OPENCL_POCL:
+    'TestRecordEventBlocking': 'pass, then pure virtual method called'
     hipDeviceMalloc: 'Either segfault or hang inside the malloc kernel'
     TestMemcpyAsyncPageable: 'Relying on timings for kernels/memory copies not reliable on CPU'
     TestStaticLibRDC: 'LLVM-16 still being tested but not recompiled to include the static library fix'
     cuda-reduction: 'timeout on LLVM16, enable to reproduce anywhere other than github runne'
-    TestRecordEventBlocking: 'Segfault in the PoCL driver with module caching on'
     Unit_ballot: ''
     BinomialOption: ''
     DCT: ''
@@ -394,7 +394,6 @@ salami:
     Unit_hipMultiThreadStreams1_AsyncSync: '' 
     Unit_hipMultiThreadStreams1_AsyncAsync: '' 
     hipMemset_Unit_hipMemsetAsync_SetMemoryWithOffset_Helgrind: '' 
-    TestRecordEventBlocking: '' 
     MatrixMultiply: '' 
     hipEvent: '' 
     shuffle: '' 
