Remove remaining references to CHIP_BUILD_HIPBLAS/HIPFFT/HIPSOLVER options

--- a/tests/libraries/CMakeLists.txt
+++ b/tests/libraries/CMakeLists.txt
@@ -1,4 +1,2 @@
-if (CHIP_BUILD_HIPBLAS)
-    add_hip_test(hipBlas-sgemm.cpp)
-    target_link_libraries(hipBlas-sgemm hipblas)
-endif()
+# hipBLAS tests require external hipBLAS installation
+# Use install_chipstar.py to install chipStar with hipBLAS support
